unpackaged/main/default/objects/Case/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Closed - Lack of response from Customer</fullName>
            </value>
            <value>
                <fullName>Case Closed - SPAM</fullName>
            </value>
            <value>
                <fullName>Case Handled by Analytics Team</fullName>
            </value>
            <value>
                <fullName>Case Handled by CloudOps Team</fullName>
            </value>
            <value>
                <fullName>Case Handled by CS Ops</fullName>
            </value>
            <value>
                <fullName>Case Handled by Development Team</fullName>
            </value>
            <value>
                <fullName>Case handled by SF Admin</fullName>
            </value>
            <value>
                <fullName>Case handled by SF Dev</fullName>
            </value>
            <value>
                <fullName>Case Handled by Technical Solutions Team</fullName>
            </value>
            <value>
                <fullName>Comms - validation</fullName>
            </value>
            <value>
                <fullName>Configuration - CRM</fullName>
            </value>
            <value>
                <fullName>Configuration - Data Logger</fullName>
            </value>
            <value>
                <fullName>Configuration - FSM</fullName>
            </value>
            <value>
                <fullName>Configuration - local DAS Update</fullName>
            </value>
            <value>
                <fullName>Configuration - PI AF Asset update</fullName>
            </value>
            <value>
                <fullName>Configuration - SQL DB Asset update</fullName>
            </value>
            <value>
                <fullName>Data Adjustment</fullName>
            </value>
            <value>
                <fullName>Data - Input / Adjustment / Deleted</fullName>
            </value>
            <value>
                <fullName>Data - Manual Backfill</fullName>
            </value>
            <value>
                <fullName>Data - Manual Reconstruction</fullName>
            </value>
            <value>
                <fullName>Data - Manual Reprocess</fullName>
            </value>
            <value>
                <fullName>Data - Meter Offset Added</fullName>
            </value>
            <value>
                <fullName>Data - SQL 8760 Upload / Update</fullName>
            </value>
            <value>
                <fullName>Decommission</fullName>
            </value>
            <value>
                <fullName>Documentation or Training Provided</fullName>
            </value>
            <value>
                <fullName>Drive - Def Sync</fullName>
            </value>
            <value>
                <fullName>Drive Events - Reprocess</fullName>
            </value>
            <value>
                <fullName>Drive - Model Generation</fullName>
            </value>
            <value>
                <fullName>Drive O&amp;M - Layout Adjustment</fullName>
            </value>
            <value>
                <fullName>Drive O&amp;M - Permission Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>