unpackaged/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Management</fullName>
            </value>
            <value>
                <fullName>Admin Job - Data Reprocess</fullName>
            </value>
            <value>
                <fullName>Admin Job - Definition Sync</fullName>
            </value>
            <value>
                <fullName>Admin - Jobs</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Beta Testing</fullName>
            </value>
            <value>
                <fullName>Case - Case Manager</fullName>
            </value>
            <value>
                <fullName>Case - Case Templates</fullName>
            </value>
            <value>
                <fullName>Communication Loss</fullName>
            </value>
            <value>
                <fullName>Communication Loss - Customer</fullName>
            </value>
            <value>
                <fullName>Communication Loss - Power factors</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Customer Specific Job</fullName>
            </value>
            <value>
                <fullName>Customer Specific Job Failure</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>Data &amp; Trends - historical</fullName>
            </value>
            <value>
                <fullName>Data &amp; Trends - Real-Time</fullName>
            </value>
            <value>
                <fullName>Data Acquisition</fullName>
            </value>
            <value>
                <fullName>Data Backfill</fullName>
            </value>
            <value>
                <fullName>Data Extraction</fullName>
            </value>
            <value>
                <fullName>Data Ingestion</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Data Reconstruction</fullName>
            </value>
            <value>
                <fullName>Data Reprocess</fullName>
            </value>
            <value>
                <fullName>Decommissioning</fullName>
            </value>
            <value>
                <fullName>Device Mapping</fullName>
            </value>
            <value>
                <fullName>Direct connect</fullName>
            </value>
            <value>
                <fullName>Drive Data</fullName>
            </value>
            <value>
                <fullName>Drive Historical Data</fullName>
            </value>
            <value>
                <fullName>Drive Mobile App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>