unpackaged/main/default/objects/Case/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Weather Data Unavailable</fullName>
            </value>
            <value>
                <fullName>API Latency</fullName>
            </value>
            <value>
                <fullName>BUG</fullName>
            </value>
            <value>
                <fullName>Configuration Error - API</fullName>
            </value>
            <value>
                <fullName>Configuration Error - CRM</fullName>
            </value>
            <value>
                <fullName>Configuration Error - Data Logger</fullName>
            </value>
            <value>
                <fullName>Configuration Error - PI AF</fullName>
            </value>
            <value>
                <fullName>Configuration Error - SQL</fullName>
            </value>
            <value>
                <fullName>Configuration - Missing Object</fullName>
            </value>
            <value>
                <fullName>Customer Asset Sold</fullName>
            </value>
            <value>
                <fullName>Customer - Configuration Changes</fullName>
            </value>
            <value>
                <fullName>DAS - API Configuration Error</fullName>
            </value>
            <value>
                <fullName>DAS - API Connection Issue</fullName>
            </value>
            <value>
                <fullName>DAS - API Latency</fullName>
            </value>
            <value>
                <fullName>DAS - API Source Data Unavailable</fullName>
            </value>
            <value>
                <fullName>Data Unavailable</fullName>
            </value>
            <value>
                <fullName>DPSA or Organic Growth</fullName>
            </value>
            <value>
                <fullName>Drive Backend Program Error</fullName>
            </value>
            <value>
                <fullName>Drive - VEE</fullName>
            </value>
            <value>
                <fullName>End of Contract with PowerFactors</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Implementation Quality</fullName>
            </value>
            <value>
                <fullName>Incorrect Permissions</fullName>
            </value>
            <value>
                <fullName>Invalid Input Data</fullName>
            </value>
            <value>
                <fullName>N/A -SPAM</fullName>
            </value>
            <value>
                <fullName>New Data Logger installlation</fullName>
            </value>
            <value>
                <fullName>New Device installation</fullName>
            </value>
            <value>
                <fullName>New Inverter / Meter installation</fullName>
            </value>
            <value>
                <fullName>Notification Adjustment</fullName>
            </value>
            <value>
                <fullName>On -Site - DAS Communication Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>