unpackaged/main/default/objects/Case/fields/Check_If_Status_is_Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>Check_If_Status_is_Pending_Approval__c</fullName>
    <formula>IF(  ISPICKVAL(Status , &#39;Pending Approval&#39;) , True, False)</formula>
    <label>Check If Status is Pending Approval</label>
    <type>Checkbox</type>
</CustomField>