unpackaged/main/default/objects/Case/fields/Controlling_Field__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field__c</fullName>
    <label>Controlling Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Request/Inquiry</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Communication issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>