unpackaged/main/default/objects/Case/fields/Failure__c.field-meta.xml
<CustomField>
    <fullName>Failure__c</fullName>
    <label>Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Decommissioning Request</fullName>
            </value>
            <value>
                <fullName>Drive Config Missing Object</fullName>
            </value>
            <value>
                <fullName>Drive Data - Historical -Invalid</fullName>
            </value>
            <value>
                <fullName>Drive Data - Historical - Missing</fullName>
            </value>
            <value>
                <fullName>Drive Data - Live - Intermittent</fullName>
            </value>
            <value>
                <fullName>Drive Data - Live -Invalid</fullName>
            </value>
            <value>
                <fullName>Drive Data - Live - Stale</fullName>
            </value>
            <value>
                <fullName>Drive Data - Live - Unavailable</fullName>
            </value>
            <value>
                <fullName>Drive Events - False</fullName>
            </value>
            <value>
                <fullName>Drive Events - Incorrect Logic</fullName>
            </value>
            <value>
                <fullName>Drive Events - not closing</fullName>
            </value>
            <value>
                <fullName>FSM -Job</fullName>
            </value>
            <value>
                <fullName>MetaData -Incorrect</fullName>
            </value>
            <value>
                <fullName>MetaData - Missing</fullName>
            </value>
            <value>
                <fullName>Custom Request</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>N/A - SPAM</fullName>
            </value>
            <value>
                <fullName>User Access Request</fullName>
            </value>
            <value>
                <fullName>Permissions Error</fullName>
            </value>
            <value>
                <fullName>PI Stale Data - PF Internal Alert</fullName>
            </value>
            <value>
                <fullName>Reports - Unavailable / Incorrect</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Implementation or Onboarding Request</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>