unpackaged/main/default/objects/Case/fields/Pending_Approval_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval_Time_Stamp__c</fullName>
    <label>Pending Approval Time Stamp</label>
    <type>DateTime</type>
</CustomField>