unpackaged/main/default/objects/Case/recordTypes/Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>Feature_Request</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Feature Request</label>
    
    </RecordType>