unpackaged/main/default/objects/Case/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Issue</label>
</RecordType>