unpackaged/main/default/objects/Case/recordTypes/Request.recordType-meta.xml
<RecordType>
    <fullName>Request</fullName>
    <active>true</active>
    <businessProcess>Support Process</businessProcess>
    <label>Request</label>
    
    </RecordType>