unpackaged/main/default/objects/Case/validationRules/Priority_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_Required</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(
ISPICKVAL(  Priority , &quot;P0 - Emergency&quot;),
ISPICKVAL(  Priority , &quot;P1 - Critical&quot;),
ISPICKVAL(  Priority , &quot;P2 - High&quot;),
ISPICKVAL(  Priority , &quot;P3 - Medium&quot;),
ISPICKVAL(  Priority , &quot;P4 - Low&quot;)
))</errorConditionFormula>
    <errorMessage>Priority is required.</errorMessage>
</ValidationRule>