unpackaged/main/default/objects/Case/validationRules/Update_Case_Resolved_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Case_Resolved_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status , &quot;Resolved&quot;) ,
ISBLANK(  Resolved_Date__c ) 

)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Update Case Resolved Date</errorMessage>
</ValidationRule>