unpackaged/main/default/objects/Case/listViews/Drive_O_M_Case.listView-meta.xml
<ListView>
    <fullName>Drive_O_M_Case</fullName>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>Hours_Open_Case_Age__c</columns>
    <filterScope>Queue</filterScope>
    <label>Drive O &amp; M</label>
    <queue>Drive_O_M</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>