unpackaged/main/default/objects/Case/listViews/General_and_PF_Community_Case.listView-meta.xml
<ListView>
    <fullName>General_and_PF_Community_Case</fullName>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>Hours_Open_Case_Age__c</columns>
    <filterScope>Queue</filterScope>
    <label>General</label>
    <queue>General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>